correcao do bug e criacao das validacoes dos campos Fixes #3 Fixes #7

--- a/site/test/fixtures/respostas.yml
+++ b/site/test/fixtures/respostas.yml
@@ -3,11 +3,13 @@
 one:
   has_many: MyString
   : 
+  texto: MyString
   has_many: MyString
   : 
 
 two:
   has_many: MyString
   : 
+  texto: MyString
   has_many: MyString
   : 
