--- a/site/test/fixtures/postagens.yml
+++ b/site/test/fixtures/postagens.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  text: MyString
+  arquivos: MyString
   has_many: 
-  has_many: 
+  tipo: MyString
 
 two:
+  text: MyString
+  arquivos: MyString
   has_many: 
-  has_many: 
+  tipo: MyString
