--- a/site/test/fixtures/usuarios.yml
+++ b/site/test/fixtures/usuarios.yml
@@ -1,15 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  nome: MyString
   username: MyString
-  Nome: MyString
-  senha: MyString
-  id_turma: 1
-  permissoes: MyString
+  password: MyString
 
 two:
+  nome: MyString
   username: MyString
-  Nome: MyString
-  senha: MyString
-  id_turma: 1
-  permissoes: MyString
+  password: MyString
