correção model comentario Fixes #82

--- a/site/test/fixtures/comentarios.yml
+++ b/site/test/fixtures/comentarios.yml
@@ -2,10 +2,10 @@
 
 one:
   id_post: 1
-  conteudo: 
+  conteudo: MyString
   id_usuario: 1
 
 two:
   id_post: 1
-  conteudo: 
+  conteudo: MyString
   id_usuario: 1
